tests/models/enum/unit/fail/le.rs
use dade::model;
#[model]
enum TestModel {
   #[field(le = 2)]
   Value
}
fn main() {}
