tests/models/enum/unit/fail/le.stderr
error: Only support alias term on the unit field.
 --> tests/models/enum/unit/fail/le.rs:5:4
  |
5 |    Value
  |    ^^^^^
